--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+ProjectSettings/RiderScriptEditorPersistedState.asset
+
+UserSettings/EditorUserSettings.asset
+
+UserSettings/Layouts/default-2021.dwlt
